fixes pargrpah spacing on about page

--- a/site.css
+++ b/site.css
@@ -171,6 +171,11 @@ display: inline-block;
 section p {
     margin: 0 5%;
 }
+.paragraph {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+}
 
 @media screen and (max-width: 550px){
     body {
@@ -253,6 +258,7 @@ section p {
     .contact-table .label {
         min-width: initial;
     }
+
     .about-nav-image, .about-sec-image, .about-sec-image.quarter {
         width: 100%;
     }
